# small_projects

./: .gitmodules
SFML_playground/: .gitignore  CMakeLists.txt  README.md
SFML_playground/src/: Source.cpp
SFML_playground/src/Controller/: Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp
SFML_playground/src/EventSystem/: KeyboardEvent.hpp  event.hpp
SFML_playground/src/Game/: Game.cpp  Game.hpp
SFML_playground/src/common/: bit.hpp
discord_game/: .eslintrc.json  package-lock.json  package.json
discord_game/src/: index.js
discord_game/src/commands/: ping.js  profile.js
tic_tac_toe/: README.md  package-lock.json  package.json
tic_tac_toe/src/: Board.js  Game.js  Square.js  index.css  index.js
